Pilot fixes - Changed 'Flagged Entries' text to 'Total Flags', converted all external links to URLs, fixed spacing for tables
(cherry picked from commit 88253041fcbab90e18cd2469f0ef0fe6ff163392)

--- a/src/styles/elements/_tables.scss
+++ b/src/styles/elements/_tables.scss
@@ -20,6 +20,7 @@
     text-align: left;
     vertical-align: top;
     border: 0;
+    padding: 7px 25px 7px 5px;
   }
 
   .rt-thead .rt-th {
